--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
     width: 1100px;
     border: 1px solid #ddd;
     height: 600px;
+    padding-top: 5px;
+    background-color: 	#ffffff;
 }
 .col{
     float: left;   
@@ -14,12 +16,19 @@
     margin-top: 5px;
     text-align: center;
     text-transform: uppercase;
-    color: rgb(221, 9, 44);
+    color: red;
+    border: 2px solid green;
+    padding: 15px;
+   
 }
 .nowBox{
     text-align: center;
     text-transform: uppercase;
-    color: green;
+    color: red;
+    border: 2px solid #1e7070;
+    border-radius: 20px;
+    font-size: 15px;
+     
 }
 .timeMenu{
      
@@ -69,7 +78,7 @@
     width: 600px;
     height: 290px;
     padding: 10px;
-    background: blue;
+    background: #1e7070;
 }
 .roomBox{
     
@@ -94,12 +103,15 @@
     font-size: 15px;
     text-align: center;
     text-decoration: none;
-    color: red;
+    color: white;
     border: 1px solid #ddd;
     padding: 5px;
+    background: green;
+    width: 200px;
 }
 .seeRoutine:hover{
-    color: green;
+     
+    background-color: red;
 }
 
 .option_menu {
@@ -132,6 +144,6 @@
     display: block;
     overflow: hidden;
     text-align: center;
-    background-color: #4d9a4d;
+    background-color: #f26d21 ;
     padding: 10px;
 }
