--- a/style.css
+++ b/style.css
@@ -142,7 +142,20 @@ body{
     padding: 5px;
     background: green;
     width: 200px;
+
+    position: relative;
+    animation-name: example;
+    animation-duration: 3s;
+    animation-iteration-count: 30;
+
 }
+@keyframes example {
+    0%   {background-color:red;}
+    25%  {background-color:yellow;}
+    50%  {background-color:blue;}
+    75%  {background-color:green;}
+    100% {background-color:red;}
+  }
 .seeRoutine:hover{
      
     background-color: red;
