--- a/style.css
+++ b/style.css
@@ -12,27 +12,91 @@ body{
 .container{
     margin: 0 auto;
     width: 1100px;
-    padding-top: 5px;
     background-color:#FFFFFF;
 }
+
+/* Navbar container */
+.navbar {
+    overflow: hidden;
+    background-color: #1e7070;
+    font-family: Arial;
+}
+  
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;  
+    margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: red;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color:#ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Containt area */
+
+
 .col{
     float: left;   
 }
 .University{
     font-size: 23px;
-    margin-top: 5px;
     text-align: center;
     text-transform: uppercase;
     color: red;
-    border: 2px solid green;
+    border-top: 3px solid green;
+    border-bottom:2px solid rgb(16, 128, 16);
     padding: 20px;
     background-color: #ddd;
     display: block;
    
 }
 .nowBox{
-    width: 500px;
-    margin: 0 auto;
+    margin: 0 20px;
     text-align: center;
     text-transform: uppercase;
     color: red;
@@ -49,7 +113,6 @@ body{
 }
 
 .timeBox{
-     
     width: 90px;
     font-size: 14px;
     line-height: 25px;
@@ -60,10 +123,8 @@ body{
     margin-right: 2px;
     display: inline-block;
     padding: 2px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
      
-}
-.timeBox:hover{
-    background: red;
 }
 
 .dayMenu{
@@ -73,27 +134,24 @@ body{
     padding: 5px;
 }
 .dayBox{
-    
     width: 150px;
     margin: 2px;
     line-height: 35px;
     font-size: 20px;
     color:#FFFFFF;
     background-color: green;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
      
 }
-.dayBox:hover{
-    background: red;
-}
+
 .dayBoxNow{
     text-decoration: none;
     height: 35px;
-    width: 143px;
+    width: 150px;
     display: inline-table;
     color: #e1e6ff;
     background-color: green;
     font-size: 24px;
-    border: 2px solid#ddd;
 }
 
 .roomMenu{
@@ -103,7 +161,6 @@ body{
     background: #1e7070;
 }
 .roomBox{
-    
     width:110px;
     height:35px;
     border: 2px solid #fff;
@@ -114,6 +171,8 @@ body{
     text-align: center;
     color:white ;
 }
+
+/* Find Area start */
 .findArea{
     height: 310px;
     width: 295px;
@@ -152,43 +211,31 @@ body{
     padding: 5px;
     background: green;
     width: 200px;
-
     position: relative;
     animation-name: example;
     animation-duration: 3s;
     animation-iteration-count: 30;
-
 }
+
 @keyframes example {
     0%   {background-color:red;}
     25%  {background-color:yellow;}
     50%  {background-color:blue;}
     75%  {background-color:green;}
     100% {background-color:red;}
-  }
+}
+
 .seeRoutine:hover{
-     
     background-color: red;
 }
 
-.option_menu {
-    width: 200px;
-    height: 30px;
-}
-.option_menu option{
-    font: 20px;
-    color: #FFFFFF;
-    background-color: green;
-    line-height: 25px;
-   
-    
-}
 .imgLogo{
     margin-top: 25px;
     margin-bottom: 30px;
     width: 216px;
 }
-.EmptyClassRoom{
+
+.footer_area{
     width: 1080px;
     display: block;
     overflow: hidden;
@@ -196,3 +243,51 @@ body{
     background-color: #f26d21 ;
     padding: 10px;
 }
+
+
+/* table of routine */
+
+table, th, td {
+    border: 1px solid #5cc8d7;
+    border-collapse: collapse;
+  }
+  
+  tr:nth-child(odd) {
+    background-color: rgba(150, 212, 212, 0.4);
+  }
+  
+  tr:nth-child(1) {
+    background-color: white;
+    color: rgb(153, 0, 126);
+    text-align: center;
+  }
+  
+  tr:nth-child(2) {
+    background-color: rgb(191, 72, 72);
+    color: aliceblue;
+  }
+   
+  th, td {
+    padding: 10px;
+  }
+  
+  .r_table {
+    width: 100% !important;
+  }
+  
+  .t_table {
+    width: 100% !important;
+  }
+
+  .Faculty{
+    text-align: center;
+   border: 1px solid red;
+   padding: 10px 0 10px 0;
+  }
+
+
+  .linkImg{
+    height: 300px;
+    width: 300px;
+    margin-left: 380px;
+  }
